data/derived/sp14/progs/unify/prog4497.ml.out
Characters 130-131:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a -> 'b -> 'a list
       but an expression was expected of type 'a -> 'b -> 'a
       The type variable 'a occurs inside 'a list
